# gmail-simple

./: .gitignore  .travis.yml  LICENSE  README.md  build-script.sh  gmail-simple.cabal
src/Network/GMail/: Simple.hs
