name: gmail-simple
version: 0.1.0.0
cabal-version: >= 1.2
build-type: Simple

library
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base
    , jwt
    , http-conduit
    , text
    , time
    , unordered-containers
    , aeson
    , base64
    , http-media
    , bytestring
    , cryptonite
    , containers
    , http-api-data
    , blaze-html
  exposed-modules:
    Network.GMail.Simple
