name: gmail-simple
version: 0.1.0.0
synopsis: Simple library for Google Mail (GMail).
description:
  Easy-to-use library to interact with the Google Mail API.
  .
  Current only supporting sending mails.
license: BSD3
licence-file: LICENSE
bug-reports: https://github.com/Daniel-Diaz/gmail-simple/issues
homepage: https://github.com/Daniel-Diaz/gmail-simple/blob/main/README.md
build-type: Simple
cabal-version: >= 1.2
extra-source-files:
  README.md

library
  default-language: Haskell2010
  hs-source-dirs: src
  ghc-options: -Wall
  build-depends:
      base
    , jwt
    , http-conduit
    , text
    , time
    , unordered-containers
    , aeson
    , base64
    , http-media
    , bytestring
    , cryptonite
    , containers
    , http-api-data
    , blaze-html
  exposed-modules:
    Network.GMail.Simple
